testing/tests/ui/since_1.58/typo_in_keyword.stderr
error: problems parsing template source at row 1, column 26 near:
       "endfo%}\n12345678901234567890123456789012"...
 --> tests/ui/since_1.58/typo_in_keyword.rs:5:14
  |
5 |     source = "{%for i in 1..=10%}{{i}}{%endfo%}\n1234567890123456789012345678901234567890",
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
